--- a/mingw-w64-opencv/PKGBUILD
+++ b/mingw-w64-opencv/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=opencv
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=4.0.1
-pkgrel=1
+pkgver=4.3.0
+pkgrel=2
 pkgdesc="Open Source Computer Vision Library (mingw-w64)"
 arch=('any')
 url="https://opencv.org/"
@@ -26,44 +26,69 @@ source=("${_realname}-${pkgver}.tar.gz"::https://github.com/opencv/opencv/archiv
         '0008-mingw-w64-cmake-lib-path.patch'
         '0009-openblas-find.patch'
         '0010-find-libpng-header.patch'
-        '0011-dshow-build-fix.patch'
         '0012-make-header-usable-with-C-compiler.patch'
         '0014-python-install-path.patch'
+        '0015-windres-cant-handle-spaces-in-defines.patch'
         '0101-somehow-uint-not-detected.patch'
-        '0102-mingw-w64-have-sincos.patch')
-sha256sums=('7b86a0ee804244e0c407321f895b15e4a7162e9c5c0d2efc85f1cadec4011af4'
-            '0d8acbad4b7074cfaafd906a7419c23629179d5e98894714402090b192ef8237'
-            '0f356755ac20b042a5332e4747b8cd446eaf6f6a62e5a6ce8e9be90b0edede8e'
+        '0102-mingw-w64-have-sincos.patch'
+        '0103-sfm-module-linking.patch'
+        '0104-rgbd-module-missing-include.patch')
+sha256sums=('68bc40cbf47fdb8ee73dfaf0d9c6494cd095cf6294d99de445ab64cf853d278a'
+            'acb8e89c9e7d1174e63e40532125b60d248b00e517255a98a419d415228c6a55'
+            '496165d79ffdaee4626697c7f1c90891c1108854da2a266138c94dcb28e7a90f'
             'fd4e095c3c879413184fc6b91a7b0a77dbb128612341a8be2c99d804a203e362'
             '52ebc8875b9ef3ea70897f34509228daeff73d0cab0aa9eb8b931be6a7d32d7f'
             'aaf2a1952b04c9be3a133b08b0a06f536b4e9ba5f312a03f41301dba61a3fc94'
             '7398e66f80be37382bd427b5eb3a1201a23113c14e71435a44df8779ea1b8a34'
             'e3e2cfc85a9588c545c08f12dcdf933b8b32df9b887944b84c01d520f563ac21'
-            '15d4cf15196c7557af6e14d1d7b99aa9b462bd13435b3878dc28f85d00aa3e72'
-            '7958ac5d80c643060e482fd6bac3bddd1199c1629ea6bea674179e7279b07d5d'
+            'f4d9c95251d74165de89f9c4f17a9a265302aca10ac8723a866f413a2181a361'
             '7350e41ac9dfd95213b880ff017edda155ad704e35e024cfd9f42d286178b1fb'
             'e7ca030c5fc9d1292ff464afe5fd83ebe7d58df98321ed83dc55afba8a60ea3d'
+            '41355ee1729805557f065de8336c07c5798d6eb3c09456edc837a8b78b11f03a'
             '7d2ff25f97c84b59793502786dd64e25c8ca991b0523ffea56b45ce031e80c3f'
-            'ba227bb88c7e6948c54c5a3c8347daf5e2c930e99fb155047015bc5cfa2b33e5')
+            'ba227bb88c7e6948c54c5a3c8347daf5e2c930e99fb155047015bc5cfa2b33e5'
+            'd9d4da3c3f0c84b80fd14b882378c79c91435db9e33b9a6199d8eb260ed6eb13'
+            '3ed3f516c0a93954fdbcd08df2e685993a2cb954926524265aa13beabe699c29')
+
+# Helper macros to help make tasks easier #
+apply_patch_with_msg() {
+  for _patch in "$@"
+  do
+    msg2 "Applying ${_patch}"
+    patch -Nbp1 -i "${srcdir}/${_patch}"
+  done
+}
+
+del_file_exists() {
+  for _fname in "$@"
+  do
+    if [ -f ${_fname} ]; then
+      rm -rf ${_fname}
+    fi
+  done
+}
+# =========================================== #
 
 prepare() {
   cd "${srcdir}/${_realname}-${pkgver}"
+  apply_patch_with_msg \
+        0001-mingw-w64-cmake.patch \
+        0002-solve_deg3-underflow.patch \
+        0003-issue-4107.patch \
+        0004-generate-proper-pkg-config-file.patch \
+        0008-mingw-w64-cmake-lib-path.patch \
+        0009-openblas-find.patch \
+        0010-find-libpng-header.patch \
+        0012-make-header-usable-with-C-compiler.patch \
+        0014-python-install-path.patch \
+        0015-windres-cant-handle-spaces-in-defines.patch
 
-  patch -Np1 -i "${srcdir}/0001-mingw-w64-cmake.patch"
-  patch -Np1 -i "${srcdir}/0002-solve_deg3-underflow.patch"
-  patch -Np1 -i "${srcdir}/0003-issue-4107.patch"
-  patch -Np1 -i "${srcdir}/0004-generate-proper-pkg-config-file.patch"
-
-  patch -Np1 -i "${srcdir}/0008-mingw-w64-cmake-lib-path.patch"
-  patch -Np1 -i "${srcdir}/0009-openblas-find.patch"
-  patch -Np1 -i "${srcdir}/0010-find-libpng-header.patch"
-  patch -Np1 -i "${srcdir}/0011-dshow-build-fix.patch"
-  patch -Np1 -i "${srcdir}/0012-make-header-usable-with-C-compiler.patch"
-  patch -Np1 -i "${srcdir}/0014-python-install-path.patch"
-  
   cd "${srcdir}/${_realname}_contrib-${pkgver}"
-  patch -Np1 -i "${srcdir}/0101-somehow-uint-not-detected.patch"
-  patch -Np1 -i "${srcdir}/0102-mingw-w64-have-sincos.patch"
+  apply_patch_with_msg \
+        0101-somehow-uint-not-detected.patch \
+        0102-mingw-w64-have-sincos.patch \
+        0103-sfm-module-linking.patch \
+        0104-rgbd-module-missing-include.patch
 }
 
 build() {
@@ -73,9 +98,11 @@ build() {
   CFLAGS+=" -D_POSIX_SOURCE -Wno-attributes"
   CXXFLAGS+=" -D_POSIX_SOURCE -Wno-attributes"
 
-  #export OpenBLAS_HOME=${MINGW_PREFIX}
+  export OpenEXR_HOME=${MINGW_PREFIX}
+  export OpenBLAS_HOME=${MINGW_PREFIX}
+  export TINYDNN_ROOT=${MINGW_PREFIX}/include/tiny_dnn
 
-  MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
+  MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=;-DPYTHON2_PACKAGES_PATH=;-DPYTHON3_PACKAGES_PATH=" \
   ${MINGW_PREFIX}/bin/cmake.exe -Wno-dev \
     -G"MSYS Makefiles" \
     -DCMAKE_BUILD_TYPE=Release \
@@ -85,6 +112,7 @@ build() {
     -DWITH_OPENCL=ON \
     -DWITH_OPENGL=ON \
     -DWITH_TBB=ON \
+    -DWITH_XINE=OFF \
     -DBUILD_WITH_DEBUG_INFO=OFF \
     -DBUILD_DOCS=OFF \
     -DBUILD_TESTS=OFF \
@@ -99,17 +127,19 @@ build() {
     -DWITH_VTK=OFF \
     -DWITH_GDAL=OFF \
     -DWITH_JASPER=OFF \
+    -DWITH_MSMF=OFF \
     -DWITH_FFMPEG=OFF \
-    -DWITH_GPHOTO2=OFF \
     -DWITH_GSTREAMER=OFF \
     -DWITH_OPENEXR=OFF \
     -DWITH_PROTOBUF=OFF \
     -DWITH_XINE=OFF \
+    -DWITH_OPENCL_D3D11_NV=OFF \
+    -DOPENCV_SKIP_PYTHON_LOADER=ON \
     -DCMAKE_SKIP_RPATH=ON \
     -DENABLE_PRECOMPILED_HEADERS=OFF \
+    -DOPENCV_EXTRA_MODULES_PATH=../${_realname}_contrib-${pkgver}/modules \
     -DBUILD_opencv_python2=OFF \
     -DBUILD_opencv_python3=OFF \
-    -DOPENCV_EXTRA_MODULES_PATH=../${_realname}_contrib-${pkgver}/modules \
     -DBUILD_INFO_SKIP_EXTRA_MODULES=ON \
     -DOPENCV_GENERATE_PKGCONFIG=ON \
     ../${_realname}-${pkgver}
