OpenBLAS 0.3.10 (#131) and update CI

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,6 +21,8 @@ jobs:
           SET PATH=c:\rtools40\usr\bin;%PATH%
           rmdir /s /Q "C:\Program Files\Boost"
           copy /y pacman.conf C:\rtools40\etc\pacman.conf
+          C:\rtools40\usr\bin\curl -OSsl "http://repo.msys2.org/msys/x86_64/msys2-keyring-r21.b39fb11-1-any.pkg.tar.xz"
+          C:\rtools40\usr\bin\pacman -U --noconfirm msys2-keyring-r21.b39fb11-1-any.pkg.tar.xz && rm msys2-keyring-r21.b39fb11-1-any.pkg.tar.xz
           C:\rtools40\usr\bin\pacman -Syyuu --noconfirm --ask 20
           C:\rtools40\usr\bin\pacman -Syyuu --noconfirm --ask 20
           C:\rtools40\usr\bin\pacman --noconfirm --needed -S git ca-certificates
