--- a/mingw-w64-gcc/PKGBUILD
+++ b/mingw-w64-gcc/PKGBUILD
@@ -8,10 +8,10 @@ _realname=gcc
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-fortran")
-pkgver=8.3.0
-_srcver=8.3.0
+pkgver=9.3.0
+_srcver=9.3.0
 #_srcver=8.3.0-RC-20190215
-pkgrel=9500
+pkgrel=1
 pkgdesc="GCC for the MinGW-w64"
 arch=('any')
 url="https://gcc.gnu.org"
@@ -33,7 +33,8 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-${_realname}"
 optdepends=()
 groups=("rtools-gcc")
 options=('staticlibs' '!emptydirs') # '!strip' 'debug')
-source=("https://ftp.gnu.org/gnu/gcc/${_realname}-${pkgver}/${_realname}-${pkgver}.tar.gz"{,.sig}
+source=("https://ftp.gnu.org/gnu/gcc/${_realname}-${pkgver}/${_realname}-${pkgver}.tar.xz"{,.sig}
+        #https://www.mirrorservice.org/sites/sourceware.org/pub/gcc/snapshots/${_majorver}-${_snapshot}/gcc-${_majorver}-${_snapshot}.tar.xz
         "gdbinit"
         0002-Relocate-libintl.patch
         0003-Windows-Follow-Posix-dir-exists-semantics-more-close.patch
@@ -45,14 +46,13 @@ source=("https://ftp.gnu.org/gnu/gcc/${_realname}-${pkgver}/${_realname}-${pkgve
         0009-gcc-make-xmmintrin-header-cplusplus-compatible-depre.patch
         0010-Fix-using-large-PCH.patch
         0011-Enable-shared-gnat-implib.patch
-        0014-clone_function_name_1-Retain-any-stdcall-suffix.patch
-        0019-gcc-8-branch-Backport-patches-for-std-filesystem-from-master.patch
+        0012-Handle-spaces-in-path-for-default-manifest.patch
+        0014-gcc-9-branch-clone_function_name_1-Retain-any-stdcall-suffix.patch
         0130-libstdc++-in-out.patch
-        0140-gcc-8.2.0-diagnostic-color.patch
-        pr88568.patch)
-sha256sums=('ea71adc1c3d86330874b8df19611424b143308f0d6612d542472600532c96d2d'
+        0140-gcc-8.2.0-diagnostic-color.patch)
+sha256sums=('71e197867611f6054aa1119b13a0c0abac12834765fe2d81f35ac57f84f742d1'
             'SKIP'
-            'dea2bbad4967280910559c6a11b865aeec19cab34647fb5894cb498b24b14462'
+            'bce81824fc89e5e62cca350de4c17a27e27a18a1a1ad5ca3492aec1fc5af3234'
             '2dd7498bcb25b41afcc458696386b456ee4ff440bf395519a23d1f945ba15a41'
             '6033acda690786397059536787a6577e1a9f2b39f8a66276821917066094f43c'
             '388f423a67e4be6f547ca7e340ff8ee4c78b1ed83f3fd698daa409e309911807'
@@ -63,13 +63,10 @@ sha256sums=('ea71adc1c3d86330874b8df19611424b143308f0d6612d542472600532c96d2d'
             '0eaee0e1201f4f85ea20756432a9d51531e0e859f6f121276684e2b63b2ee315'
             '0decbbebda7ceac91da5d3dec9b7330f406a4358fa150560f08ff6f54739035f'
             '8faff8e503a617f283270f411399a8bcacda3ab62b4072dedf117e108af4844a'
-            '60a58ed41389691a68ef4b7d47a0328df4d28d26e6c680a6b06b31191481ca65'
-            'bf83cbc79de4c86f02664c8a624e26b12f570e3c31116fc7c46ecf655696f9a6'
-            'ba2f77db605577d08e4079f08a7a9556c975b5416be8610c5be31e915637feb7'
-            'e467f0ac68b349de826c79b00a45c5ad9e7c5a55d06b9b9fa7afd94c597f6376'
-            '4bbcb71f7e9e25af641e7abcb12ea4cd7a5ade3a82739414c65259afcbf21256')
-
-_threads="posix"
+            'e427297a118c47d2e71cb05dd9a496e9ada497917721c16918548ee2f13ad709'
+            '2321c7dce29a600477e481d16d847f05dc8c6d6461ee1eba7814c5bf62c2ef95'
+            'a526cfab91a1499be92c824c7f2185a013a38dbdfbeabe63ecbe84451e07b021'
+            'e467f0ac68b349de826c79b00a45c5ad9e7c5a55d06b9b9fa7afd94c597f6376')
 
 # Helper macros to help make tasks easier #
 apply_patch_with_msg() {
@@ -94,10 +91,8 @@ del_file_exists() {
 prepare() {
   cd ${srcdir}/${_realname}-${_srcver}
   del_file_exists intl/canonicalize.c intl/canonicalize.h \
-    intl/relocatex.c intl/relocatex.h \
-    libstdc++-v3/src/filesystem/fs-posix.h \
-    libstdc++-v3/src/filesystem/fs-win32.h \
-    gcc/testsuite/gfortran.dg/list_read_14.f90
+    intl/relocatex.c intl/relocatex.h
+
   apply_patch_with_msg \
     0002-Relocate-libintl.patch \
     0003-Windows-Follow-Posix-dir-exists-semantics-more-close.patch \
@@ -109,9 +104,8 @@ prepare() {
     0009-gcc-make-xmmintrin-header-cplusplus-compatible-depre.patch \
     0010-Fix-using-large-PCH.patch \
     0011-Enable-shared-gnat-implib.patch \
-    0014-clone_function_name_1-Retain-any-stdcall-suffix.patch \
-    0019-gcc-8-branch-Backport-patches-for-std-filesystem-from-master.patch
-    
+    0012-Handle-spaces-in-path-for-default-manifest.patch \
+    0014-gcc-9-branch-clone_function_name_1-Retain-any-stdcall-suffix.patch
 
   apply_patch_with_msg \
     0130-libstdc++-in-out.patch
@@ -120,10 +114,6 @@ prepare() {
   # Вячеслав Петрищев <vyachemail@gmail.com>
   apply_patch_with_msg \
     0140-gcc-8.2.0-diagnostic-color.patch
-
-  # https://gcc.gnu.org/bugzilla/show_bug.cgi?id=88568
-  apply_patch_with_msg \
-    pr88568.patch
 
   # do not expect ${prefix}/mingw symlink - this should be superceded by
   # 0005-Windows-Don-t-ignore-native-system-header-dir.patch .. but isn't!
@@ -166,7 +156,7 @@ build() {
     --enable-languages=c,lto,c++,fortran \
     --disable-shared --enable-static \
     --enable-libatomic \
-    --enable-threads=${_threads} \
+    --enable-threads="posix" \
     --enable-graphite \
     --enable-fully-dynamic-string \
     --enable-libstdcxx-filesystem-ts=yes \
@@ -183,6 +173,7 @@ build() {
     --disable-nls \
     --disable-werror \
     --disable-symvers \
+    --enable-plugin \
     --with-libiconv \
     --with-system-zlib \
     --with-{gmp,mpfr,mpc,isl}=${MINGW_PREFIX} \
@@ -297,6 +288,10 @@ package_mingw-w64-gcc() {
   cp share/man/man7/gfdl.7*                              ${pkgdir}${MINGW_PREFIX}/share/man/man1/
   cp share/man/man7/gpl.7*                               ${pkgdir}${MINGW_PREFIX}/share/man/man1/
   cp share/man/man1/g++.1*                               ${pkgdir}${MINGW_PREFIX}/share/man/man1/
+
+  # install plugins for binutils
+  mkdir -p ${pkgdir}${MINGW_PREFIX}/lib/bfd-plugins
+  cp lib/gcc/${MINGW_CHOST}/${pkgver}/*plugin*.dll       ${pkgdir}${MINGW_PREFIX}/lib/bfd-plugins/
 
   # install "custom" system gdbinit
   install -D -m644 ${srcdir}/gdbinit ${pkgdir}${MINGW_PREFIX}/etc/gdbinit
