Copy changes from msys2

--- a/mingw-w64-aws-sdk-cpp/PKGBUILD
+++ b/mingw-w64-aws-sdk-cpp/PKGBUILD
@@ -9,7 +9,8 @@ pkgdesc="AWS SDK for C++ (mingw-w64)"
 arch=('any')
 url="https://github.com/aws/aws-sdk-cpp"
 license=('Apache-2.0')
-makedepends=("${MINGW_PACKAGE_PREFIX}-cmake")
+makedepends=("${MINGW_PACKAGE_PREFIX}-cmake"
+             "${MINGW_PACKAGE_PREFIX}-ninja")
 options=('strip' 'staticlibs')
 source=("${_realname}-${pkgver}.tar.gz::https://github.com/aws/aws-sdk-cpp/archive/${pkgver}.tar.gz"
         "aws-sdk-cpp-pr-1333.patch"
@@ -38,24 +39,23 @@ build() {
   mkdir -p "${srcdir}"/build-${CARCH} && cd "${srcdir}"/build-${CARCH}
   export CFLAGS="-D_WIN32_WINNT=0x0600"
   export CXXFLAGS="-D_WIN32_WINNT=0x0600"
-  MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=;-DCMAKE_PREFIX_PATH=" \
+  MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
     ${MINGW_PREFIX}/bin/cmake \
-      -G'MSYS Makefiles' \
+      -GNinja \
       -DCMAKE_BUILD_TYPE=Release \
       -DBUILD_SHARED_LIBS=OFF \
-      -DCMAKE_INSTALL_PREFIX="c:${MINGW_PREFIX}" \
-      -DSTATIC_LINKING=1 \
+      -DCMAKE_INSTALL_PREFIX="${MINGW_PREFIX}" \
       -DBUILD_ONLY="config;s3;transfer" \
       -DENABLE_UNITY_BUILD=ON \
       -DAUTORUN_UNIT_TESTS=OFF \
       ../${_realname}-${pkgver}
 
-  make
+  ${MINGW_PREFIX}/bin/cmake --build .
 }
 
 package() {
   cd "${srcdir}"/build-${CARCH}
-  make install DESTDIR="${pkgdir}"
+  DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/cmake --build . --target install
 }
 
 check() {
