--- a/mingw-w64-ninja/PKGBUILD
+++ b/mingw-w64-ninja/PKGBUILD
@@ -1,11 +1,10 @@
 # Maintainer: Martell Malone <Martell Malone at g mail dot com>
 
-
 _realname=ninja
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=1.8.2
-pkgrel=9002
+pkgver=1.10.0
+pkgrel=1
 pkgdesc="Ninja is a small build system with a focus on speed (mingw-w64)"
 arch=('any')
 url="https://ninja-build.org"
@@ -14,19 +13,18 @@ depends=()
 options=('strip' 'staticlibs')
 makedepends=("re2c" "${MINGW_PACKAGE_PREFIX}-python3")
 source=("${_realname}-${pkgver}.tar.gz"::"https://github.com/ninja-build/ninja/archive/v${pkgver}.tar.gz")
-sha256sums=('86b8700c3d0880c2b44c2ff67ce42774aaf8c28cbf57725cb881569288c1c6f4')
+sha256sums=('3810318b08489435f8efc19c05525e80a993af5a55baa0dfeae0465a9d45f99f')
 
 prepare () {
   cd ${srcdir}/ninja-${pkgver}
   #linking assumes windows cmd line but we are bash :)
-  ln -sf /usr/bin/python2 /usr/bin/python
   sed -i 's|cmd /c $ar cqs $out.tmp $in && move /Y $out.tmp $out|$ar crs $out $in|g' ${srcdir}/ninja-${pkgver}/configure.py
 }
 
 build() {
   mkdir -p "${pkgdir}${MINGW_PREFIX}"/bin
   cd ${srcdir}/ninja-${pkgver}
-  python3 configure.py --bootstrap --platform mingw
+  ${MINGW_PREFIX}/bin/python3 configure.py --bootstrap --platform mingw
 }
 
 package() {
