try without werror

--- a/mingw-w64-tiledb/PKGBUILD
+++ b/mingw-w64-tiledb/PKGBUILD
@@ -49,6 +49,7 @@ build() {
     -DTILEDB_STATIC=ON \
     -DTILEDB_TBB=OFF \
     -DTILEDB_S3=ON \
+    -DTILEDB_WERROR=OFF \
   ../${_realname}-${pkgver}
   make
   make -C tiledb
