--- a/mingw-w64-tiledb/PKGBUILD
+++ b/mingw-w64-tiledb/PKGBUILD
@@ -4,7 +4,7 @@ _realname=tiledb
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=2.0.8
-pkgrel=1
+pkgrel=2
 pkgdesc="Storage management library for sparse and dense array data (mingw-w64)"
 arch=("any")
 url="https://tiledb.com/"
@@ -20,8 +20,10 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cmake"
 options=("staticlibs" "strip")
 
 source=(${_realname}-${pkgver}.tar.gz::"https://github.com/TileDB-Inc/TileDB/archive/${pkgver}.tar.gz"
-        "winfixes.patch")
+        "winfixes.patch"
+        "https://patch-diff.githubusercontent.com/raw/TileDB-Inc/TileDB/pull/1778.patch")
 sha256sums=("827a38b5c676a6cf6db716885f9c9b026e5f02109ce0e30f7145182da1e9fa23"
+            "SKIP"
             "SKIP")
 noextract=(${_realname}-${pkgver}.tar.gz)
 
@@ -29,6 +31,7 @@ prepare() {
   MSYS="winsymlinks:lnk" tar -xf ${srcdir}/${_realname}-${pkgver}.tar.gz
   cd "${srcdir}/${_realname}-${pkgver}"
   patch -p1 -i ${srcdir}/winfixes.patch
+  patch -p1 -i ${srcdir}/1778.patch
 }
 
 build() {
