--- a/mingw-w64-v8/PKGBUILD
+++ b/mingw-w64-v8/PKGBUILD
@@ -26,7 +26,8 @@ source=("bare-clones/gn::git+https://gn.googlesource.com/gn#tag=5da62d5e9d0f10cb
         "zlib.gn"
         "v8_libbase.pc"
         "v8_libplatform.pc"
-        "v8.pc")
+        "v8.pc"
+        "gn-fixes.patch")
 sha256sums=('SKIP'
             'SKIP'
             'SKIP'
@@ -42,13 +43,14 @@ sha256sums=('SKIP'
             '9ea4fc33630cf7e3af1e5b086909f85e5e37ab952a52568047608b9ceb891d7f'
             'fbddbe4849b623afb320472aab316c9a08b54182161b6b4911cb7ef7d65e2b0e'
             'ca81528892f0e02fe7ecd159568610221fb8d0df109d9d0dbdfa00c1284dd0fc'
-            '579e199a798ff76b72a5b17380a3cd09d361cb7cee99403090c3a266d1b2e527')
+            '579e199a798ff76b72a5b17380a3cd09d361cb7cee99403090c3a266d1b2e527'
+            'SKIP')
 
 prepare() {
   echo "Preparing GN source"
   cd "${srcdir}"/gn
   git apply ${srcdir}/0002-gn-ninja-deletes-objs-workaround.patch
-  sed -i.bak 's/-lkernel32/-lpsapi/g' build/gen.py
+  patch -p1 -i ${srcdir}/gn-fixes.patch
   python build/gen.py --out-path=out/${CARCH} --platform=mingw
 
   echo "Patching v8 source"
