--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,10 +24,12 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
+          path: temp
 
       - name: Move Checkout
         run: |
           Copy-Item -Path ".\temp" -Destination "C:\_" -Recurse
+        shell: powershell
 
       - uses: msys2/setup-msys2@v2
         with:
