--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,7 +22,7 @@ matrix:
   fast_finish: true
 
 build_script:
-  - rmdir /s /Q C:\OpenSSL-Win32 C:\OpenSSL-Win64
+  - rmdir /s /Q C:\OpenSSL-Win32 C:\OpenSSL-Win64 C:\Python27 C:\Python27-x64
 #  - ps: Start-FileDownload 'http://repo.msys2.org/msys/x86_64/pacman-5.2.1-6-x86_64.pkg.tar.xz'
 #  - C:\msys64\usr\bin\pacman -U --noconfirm pacman-5.2.1-6-x86_64.pkg.tar.xz
 #  - del pacman-5.2.1-6-x86_64.pkg.tar.xz
