--- a/mingw-w64-opencv/PKGBUILD
+++ b/mingw-w64-opencv/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=opencv
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=4.3.0
-pkgrel=2
+pkgver=4.4.0
+pkgrel=1
 pkgdesc="Open Source Computer Vision Library (mingw-w64)"
 arch=('any')
 url="https://opencv.org/"
@@ -24,7 +24,6 @@ source=("${_realname}-${pkgver}.tar.gz"::https://github.com/opencv/opencv/archiv
         '0003-issue-4107.patch'
         '0004-generate-proper-pkg-config-file.patch'
         '0008-mingw-w64-cmake-lib-path.patch'
-        '0009-openblas-find.patch'
         '0010-find-libpng-header.patch'
         '0012-make-header-usable-with-C-compiler.patch'
         '0014-python-install-path.patch'
@@ -33,14 +32,13 @@ source=("${_realname}-${pkgver}.tar.gz"::https://github.com/opencv/opencv/archiv
         '0102-mingw-w64-have-sincos.patch'
         '0103-sfm-module-linking.patch'
         '0104-rgbd-module-missing-include.patch')
-sha256sums=('68bc40cbf47fdb8ee73dfaf0d9c6494cd095cf6294d99de445ab64cf853d278a'
-            'acb8e89c9e7d1174e63e40532125b60d248b00e517255a98a419d415228c6a55'
+sha256sums=('bb95acd849e458be7f7024d17968568d1ccd2f0681d47fd60d34ffb4b8c52563'
+            'a69772f553b32427e09ffbfd0c8d5e5e47f7dab8b3ffc02851ffd7f912b76840'
             '496165d79ffdaee4626697c7f1c90891c1108854da2a266138c94dcb28e7a90f'
             'fd4e095c3c879413184fc6b91a7b0a77dbb128612341a8be2c99d804a203e362'
             '52ebc8875b9ef3ea70897f34509228daeff73d0cab0aa9eb8b931be6a7d32d7f'
             'aaf2a1952b04c9be3a133b08b0a06f536b4e9ba5f312a03f41301dba61a3fc94'
             '7398e66f80be37382bd427b5eb3a1201a23113c14e71435a44df8779ea1b8a34'
-            'e3e2cfc85a9588c545c08f12dcdf933b8b32df9b887944b84c01d520f563ac21'
             'f4d9c95251d74165de89f9c4f17a9a265302aca10ac8723a866f413a2181a361'
             '7350e41ac9dfd95213b880ff017edda155ad704e35e024cfd9f42d286178b1fb'
             'e7ca030c5fc9d1292ff464afe5fd83ebe7d58df98321ed83dc55afba8a60ea3d'
@@ -77,7 +75,6 @@ prepare() {
         0003-issue-4107.patch \
         0004-generate-proper-pkg-config-file.patch \
         0008-mingw-w64-cmake-lib-path.patch \
-        0009-openblas-find.patch \
         0010-find-libpng-header.patch \
         0012-make-header-usable-with-C-compiler.patch \
         0014-python-install-path.patch \
@@ -102,7 +99,7 @@ build() {
   export OpenBLAS_HOME=${MINGW_PREFIX}
   export TINYDNN_ROOT=${MINGW_PREFIX}/include/tiny_dnn
 
-  MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=;-DPYTHON2_PACKAGES_PATH=;-DPYTHON3_PACKAGES_PATH=" \
+  MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
   ${MINGW_PREFIX}/bin/cmake.exe -Wno-dev \
     -G"MSYS Makefiles" \
     -DCMAKE_BUILD_TYPE=Release \
@@ -133,14 +130,17 @@ build() {
     -DWITH_OPENEXR=OFF \
     -DWITH_PROTOBUF=OFF \
     -DWITH_XINE=OFF \
+    -DWITH_QUIRC=OFF \
+    -DWITH_ADE=OFF \
     -DWITH_OPENCL_D3D11_NV=OFF \
     -DOPENCV_SKIP_PYTHON_LOADER=ON \
     -DCMAKE_SKIP_RPATH=ON \
     -DENABLE_PRECOMPILED_HEADERS=OFF \
     -DOPENCV_EXTRA_MODULES_PATH=../${_realname}_contrib-${pkgver}/modules \
+    -DBUILD_INFO_SKIP_EXTRA_MODULES=ON \
     -DBUILD_opencv_python2=OFF \
     -DBUILD_opencv_python3=OFF \
-    -DBUILD_INFO_SKIP_EXTRA_MODULES=ON \
+    -DOPENCV_PYTHON_SKIP_DETECTION=ON \
     -DOPENCV_GENERATE_PKGCONFIG=ON \
     ../${_realname}-${pkgver}
 
