--- a/pacman.conf
+++ b/pacman.conf
@@ -86,6 +86,6 @@ SigLevel = Optional
 #SigLevel = Optional
 
 [msys]
-#Server = http://repo.msys2.org/msys/$arch/
+Server = http://repo.msys2.org/msys/$arch/
 Server = http://mirror.yandex.ru/mirrors/msys2/msys/$arch/
 Server = https://sourceforge.net/projects/msys2/msys/$arch/
