No OpenMP please

--- a/mingw-w64-imagemagick/PKGBUILD
+++ b/mingw-w64-imagemagick/PKGBUILD
@@ -60,6 +60,7 @@ build() {
     --enable-hdri \
     --enable-static \
     --disable-shared \
+    --without-threads \
     --without-modules \
     --enable-zero-configuration \
     --enable-silent-rules \
