--- a/pacman.conf
+++ b/pacman.conf
@@ -71,19 +71,13 @@ LocalFileSigLevel = Optional
 
 [mingw32]
 Server = https://dl.bintray.com/rtools/mingw32
+Server = https://cloud.r-project.org/bin/windows/Rtools/4.0/mingw32/
 SigLevel = Optional
 
 [mingw64]
 Server = https://dl.bintray.com/rtools/mingw64
+Server = https://cloud.r-project.org/bin/windows/Rtools/4.0/mingw64
 SigLevel = Optional
-
-#[oldmingw32]
-#Server = https://dl.bintray.com/r-windows/rtools
-#SigLevel = Optional
-
-#[oldmingw64]
-#Server = https://dl.bintray.com/r-windows/rtools
-#SigLevel = Optional
 
 [msys]
 Server = http://ftp.acc.umu.se/mirror/msys2.org/msys/$arch/
