--- a/mingw-w64-libgit2/PKGBUILD
+++ b/mingw-w64-libgit2/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=libgit2
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=1.0.0
+pkgver=1.1.0
 pkgrel=1
 pkgdesc='A linkable library for Git (mingw-w64)'
 arch=('any')
@@ -14,20 +14,27 @@ depends=("${MINGW_PACKAGE_PREFIX}-libssh2"
          "${MINGW_PACKAGE_PREFIX}-openssl"
          "${MINGW_PACKAGE_PREFIX}-zlib")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cmake" "${MINGW_PACKAGE_PREFIX}-gcc")
-source=(${_realname}-${pkgver}.tar.gz::"https://github.com/libgit2/libgit2/archive/v${pkgver}.tar.gz")
+source=(${_realname}-${pkgver}.tar.gz::"https://github.com/libgit2/libgit2/archive/v${pkgver}.tar.gz"
+        "https://github.com/libgit2/libgit2/pull/5594.diff"
+        "winlibs.patch")
 noextract=(${_realname}-${pkgver}.tar.gz)
-sha256sums=('6a1fa16a7f6335ce8b2630fbdbb5e57c4027929ebc56fcd1ac55edb141b409b4')
+sha256sums=('41a6d5d740fd608674c7db8685685f45535323e73e784062cf000a633d420d1e'
+            'SKIP'
+            'SKIP')
 
 prepare() {
   tar --exclude tests/resources/testrepo-worktree/link_to_new.txt -zxf ${_realname}-${pkgver}.tar.gz
   rm ${_realname}-${pkgver}/src/win32/thread.c
+  cd ${_realname}-${pkgver}
+  patch -p1 -i ${srcdir}/winlibs.patch
+  patch -p1 --reverse -i ${srcdir}/5594.diff
 }
 
 build() {
   [[ -d "${srcdir}"/build-${MINGW_CHOST} ]] && rm -rf "${srcdir}"/build-${MINGW_CHOST}
   mkdir -p "${srcdir}"/build-${MINGW_CHOST} && cd "${srcdir}"/build-${MINGW_CHOST}
 
-  unset PKG_CONFIG # cmake doesn't like
+  #unset PKG_CONFIG # cmake doesn't like
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=;-DCMAKE_PREFIX_PATH=" \
   ${MINGW_PREFIX}/bin/cmake.exe \
     -G"MSYS Makefiles" \
@@ -38,6 +45,7 @@ build() {
     -DBUILD_CLAR=OFF \
     -DTHREADSAFE=OFF \
     -DWINHTTP=ON \
+    -DREGEX_BACKEND=builtin \
     ../${_realname}-${pkgver}
 
   make
