Tweaks for AppVeyor CI

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,9 +23,7 @@ matrix:
 
 build_script:
   - rmdir /s /Q C:\OpenSSL-Win32 C:\OpenSSL-Win64 C:\Python27 C:\Python27-x64
-#  - ps: Start-FileDownload 'http://repo.msys2.org/msys/x86_64/pacman-5.2.1-6-x86_64.pkg.tar.xz'
-#  - C:\msys64\usr\bin\pacman -U --noconfirm pacman-5.2.1-6-x86_64.pkg.tar.xz
-#  - del pacman-5.2.1-6-x86_64.pkg.tar.xz
+  - C:\msys64\usr\bin\bash --login -c "pacman --noconfirm -Rcsu $(pacman -Qqe | grep mingw-w64)"
   - C:\msys64\usr\bin\pacman -Syu --noconfirm
   - C:\msys64\usr\bin\bash --login -c "$(cygpath ${APPVEYOR_BUILD_FOLDER})/ci-build.sh"
 #  - C:\msys64\usr\bin\bash --login -c "$(cygpath ${APPVEYOR_BUILD_FOLDER})/fullindex.sh"
